err/simpleapi.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simpleapi'...
Listing './lib/python3.5/site-packages/simpleapi/client'...
Compiling './lib/python3.5/site-packages/simpleapi/client/client.py'...
***   File "./lib/python3.5/site-packages/simpleapi/client/client.py", line 68
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/simpleapi/client/dummy.py'...
***   File "./lib/python3.5/site-packages/simpleapi/client/dummy.py", line 47
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/simpleapi/message'...
Compiling './lib/python3.5/site-packages/simpleapi/message/common.py'...
***   File "./lib/python3.5/site-packages/simpleapi/message/common.py", line 8
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/simpleapi/server'...
Compiling './lib/python3.5/site-packages/simpleapi/server/namespace.py'...
***   File "./lib/python3.5/site-packages/simpleapi/server/namespace.py", line 66
    print function_map[fn]['args']
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/simpleapi/server/request.py'...
***   File "./lib/python3.5/site-packages/simpleapi/server/request.py", line 110
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/simpleapi/server/route.py'...
***   File "./lib/python3.5/site-packages/simpleapi/server/route.py", line 191
    raise NotImplementedError, u'Currently not supported.'
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/simpleapi/server/serializer.py'...
***   File "./lib/python3.5/site-packages/simpleapi/server/serializer.py", line 10
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/simpleapi-0.0.9.egg-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/route.py'...
***   File "./lib/python3.5/site-packages/tests/route.py", line 15
    raise Exception, 'Django is required for running the tests'
                   ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
